add gambatte tests to CI configuration, run tests for debug and release build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,17 +48,39 @@ build_release:
 ##
 ############################################################
 
-# we run tests only on the release build since testing
-# the debug build is dead slow on the GitLab CI shared runner
-.test_release: &test_preset
+.test_release: &test_preset_release
     stage: test
     dependencies:
         - build_release
     tags:
         - linux
 
-test_mooneye:
-    <<: *test_preset
+.test_debug: &test_preset_debug
+    stage: test
+    dependencies:
+        - build_debug
+    tags:
+        - linux
+
+
+test_mooneye_release:
+    <<: *test_preset_release
     script:
         - sh ${TEST_SUBDIR}/ci_run_mooneye_tests.sh
+
+test_mooneye_debug:
+    <<: *test_preset_debug
+    script:
+        - sh ${TEST_SUBDIR}/ci_run_mooneye_tests.sh
+
+
+test_gambatte_release:
+    <<: *test_preset_release
+    script:
+        - sh ${TEST_SUBDIR}/ci_run_gambatte_tests.sh
+
+test_gambatte_debug:
+    <<: *test_preset_debug
+    script:
+        - sh ${TEST_SUBDIR}/ci_run_gambatte_tests.sh
 
