read the last commit hash, author and date for every build

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ build/doxygen/*out/*
 build/artifacts
 
 src/age_js/node_modules
+src/age_js/dist
+src/age_js/src/environments/version.ts
 
 test/age_qt_emu_test
