--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -4,10 +4,11 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --prod",
+        "start": "npm run write-version && ng serve",
+        "build": "npm run write-version && ng build --prod",
         "test": "ng test",
-        "lint": "ng lint"
+        "lint": "ng lint",
+        "write-version": "node tools/write-version.js"
     },
     "private": true,
     "dependencies": {
@@ -22,7 +23,7 @@
         "@angular/router": "5.2.9",
         "core-js": "2.5.4",
         "rxjs": "5.5.8",
-        "zone.js": "0.8.24"
+        "zone.js": "0.8.25"
     },
     "devDependencies": {
         "@angular/cli": "1.7.3",
@@ -30,7 +31,7 @@
         "@angular/language-service": "5.2.9",
         "@types/jasmine": "2.8.6",
         "@types/jasminewd2": "2.0.3",
-        "@types/node": "9.6.1",
+        "@types/node": "9.6.2",
         "codelyzer": "4.2.1",
         "jasmine-core": "2.99.1",
         "jasmine-spec-reporter": "4.2.1",
