--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,9 @@ build/doxygen/*out/*
 build/artifacts
 
 # AGE-JS build artifacts
-src/age_js/node_modules
 src/age_js/dist
+src/age_js/node_modules
+src/age_js/npm-debug.log*
 src/age_js/src/environments/version.ts
 
 # miscellaneous files
