add on demand loading of age_wasm.js and age_wasm.wasm

--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -24,6 +24,7 @@
         "@angular/platform-browser-dynamic": "5.2.9",
         "@angular/router": "5.2.9",
         "core-js": "2.5.4",
+        "font-awesome": "4.7.0",
         "rxjs": "5.5.8",
         "zone.js": "0.8.25"
     },
