--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -37,6 +37,8 @@
         "@angular/cli": "1.7.4",
         "@angular/compiler-cli": "5.2.10",
         "@angular/language-service": "5.2.10",
+        "@types/file-type": "5.2.1",
+        "@types/jszip": "3.1.3",
         "@types/jasmine": "2.8.6",
         "@types/jasminewd2": "2.0.3",
         "@types/node": "9.6.6",
