--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,20 @@ build-qt-release:
         QMAKE_ARGUMENTS: "CONFIG+=release"
 
 
+build-wasm:
+    stage: build
+    image: registry.gitlab.com/csprenger/docker-age-ci/wasm:latest
+    script:
+        - source ${REPO_EMSDK}/emsdk_env.sh
+        - ${CI_PROJECT_DIR}/build/wasm/run_cmake.sh
+    artifacts:
+        expire_in: 30 mins
+        paths:
+            - artifacts/wasm/
+    tags:
+        - linux
+
+
 
 ############################################################
 ##
