CI: move test binary to build/artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,10 @@ stages:
     - test
 
 variables:
+    ARTIFACTS_SUBDIR:   build/artifacts
+    ARTIFACTS_DIR:      ${CI_PROJECT_DIR}/${ARTIFACTS_SUBDIR}
+    ARTIFACTS_DIR_TEST: ${ARTIFACTS_DIR}/test
+    ARTIFACTS_DIR_WASM: ${ARTIFACTS_DIR_WASM}/wasm
     TEST_SUBDIR: test
 
 
@@ -21,11 +25,12 @@ variables:
         - "DIR=`mktemp -d` && cd $DIR"
         - "qmake ${QMAKE_ARGUMENTS} ${CI_PROJECT_DIR}/build/qmake/age.pro"
         - make -j 4
-        - cp age_qt_emu_test/age_qt_emu_test ${CI_PROJECT_DIR}/${TEST_SUBDIR}
+        - mkdir -p ${ARTIFACTS_DIR_TEST}
+        - cp age_qt_emu_test/age_qt_emu_test ${ARTIFACTS_DIR_TEST}
     artifacts:
         expire_in: 30 mins
         paths:
-            - ${TEST_SUBDIR}/
+            - ${ARTIFACTS_SUBDIR}/
     tags:
         - linux
 
