--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,20 +19,23 @@ variables:
 ##
 ############################################################
 
-.build: &build-qt-preset
+.build: &build-preset
     stage: build
-    script:
-        - "DIR=`mktemp -d` && cd $DIR"
-        - "qmake ${QMAKE_ARGUMENTS} ${CI_PROJECT_DIR}/build/qmake/age.pro"
-        - make -j 4
-        - mkdir -p ${ARTIFACTS_DIR_TEST}
-        - cp age_qt_emu_test/age_qt_emu_test ${ARTIFACTS_DIR_TEST}
     artifacts:
         expire_in: 30 mins
         paths:
             - ${ARTIFACTS_SUBDIR}/
     tags:
         - linux
+
+.build-qt: &build-qt-preset
+    <<: *build-preset
+    script:
+        - "DIR=`mktemp -d` && cd $DIR"
+        - "qmake ${QMAKE_ARGUMENTS} ${CI_PROJECT_DIR}/build/qmake/age.pro"
+        - make -j 4
+        - mkdir -p ${ARTIFACTS_DIR_TEST}
+        - cp age_qt_emu_test/age_qt_emu_test ${ARTIFACTS_DIR_TEST}
 
 build-qt-debug:
     <<: *build-qt-preset
@@ -46,17 +49,11 @@ build-qt-release:
 
 
 build-wasm:
-    stage: build
+    <<: *build-preset
     image: registry.gitlab.com/csprenger/docker-age-ci/wasm:latest
     script:
         - source ${REPO_EMSDK}/emsdk_env.sh
         - ${CI_PROJECT_DIR}/build/wasm/run_cmake.sh
-    artifacts:
-        expire_in: 30 mins
-        paths:
-            - artifacts/wasm/
-    tags:
-        - linux
 
 
 
