CI, artifacts: switch from untracked to specific path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,8 @@ variables:
         - mkdir -p ${ARTIFACTS_WASM}
     artifacts:
         expire_in: 30 mins
-        untracked: true
+        paths:
+            - ${ARTIFACTS}
     tags:
         - linux
 
