add wasm build and doxygen to age_bild.sh

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@
 .idea
 
 # build artifacts
-build/doxygen/*out/*
+build/doxygen/html
 build/artifacts
-build/**/build_out
 
 # AGE-JS build files
 src/age_js/dist
