GitLab CI: add AGE-JS lint job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,3 +139,10 @@ test-gambatte-release:
 #test-gambatte-debug:
 #    <<: *test-debug
 #    <<: *tests-gambatte
+
+
+lint-age-js:
+    stage: test
+    <<: *age-js-common
+    script:
+        - build/age_ci.sh js lint
