GitLab CI: configure artifacts for AGE-JS build job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,6 +88,7 @@ build-wasm:
 
 build-age-js:
     stage: build
+    <<: *artifacts-common
     <<: *age-js-common
     script:
         - build/age_ci.sh js build
