--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -4,16 +4,12 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "start": "npm run pre-build && npm run start:ng",
-        "start:ng": "ng serve",
-        "build": "npm run pre-build && npm run build:ng",
-        "build:ng": "ng build --prod",
+        "start": "npm run write-version && ng serve",
+        "build": "npm run write-version && ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
-        "pre-build": "npm run pre-build:write-version && npm run pre-build:cmake-age-wasm",
-        "pre-build:write-version": "node tools/write-version.js",
-        "pre-build:cmake-age-wasm": "node tools/cmake-age-wasm.js",
-        "pre-build:cmake-age-wasm:debug": "node tools/cmake-age-wasm.js debug"
+        "write-version": "node tools/write-version.js",
+        "cmake-age-wasm": "node tools/cmake-age-wasm.js"
     },
     "private": true,
     "dependencies": {
