don't download any artifacts for linting AGE-JS

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -153,3 +153,5 @@ lint-age-js:
     <<: *age-js-common
     script:
         - build/age_ci.sh js lint
+    # don't download any artifacts
+    dependencies: []
